# docs/openapi.json
@@ -617,6 +617,23 @@
             }
           },
           {
+            "name": "accommodation_type",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "string",
+                  "pattern": "^(room|apartment|house|sofa)$"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "Accommodation Type"
+            }
+          },
+          {
             "name": "limit",
             "in": "query",
             "required": false,
